Fix cropping of infrastructure blog banner image in blog cards

--- a/content/stylesheets/components/_cards.scss
+++ b/content/stylesheets/components/_cards.scss
@@ -88,6 +88,16 @@
         transition: 0.4s ease;
       }
 
+      img[src*="infrastructure"] {
+        object-fit: contain !important;
+        background: #0b1320;
+      }
+
+      :has(img[src*="infrastructure"])::before,
+      :has(img[src*="infrastructure"])::after {
+        display: none;
+      }
+
       &:has(img:not([src=''])) {
         &::after {
           display: none;
